--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     <div class="bd">
       <div class="note">
-        把檔案內的 <span class="mono">API_URL</span> 改成你的 Apps Script Web App URL，存檔後用 Chrome 打開即可。<br/>
+        請先確認 <span class="mono">您時否已經開通過帳號L</span> 確認過後再申請開通權限謝謝!<br/>
         Google Sheet 欄位：<span class="mono">經費代碼</span>、<span class="mono">經費項目名稱</span>、<span class="mono">職編</span>（職編可用逗號分隔多筆）。
       </div>
       <div class="small muted" style="margin-top:10px" id="meta"></div>
