--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     </div>
     <div class="bd">
       <div class="note">
-        請先確認 <span class="mono">您時否已經開通過帳號L</span> 確認過後再申請開通權限謝謝!<br/>
-        Google Sheet 欄位：<span class="mono">經費代碼</span>、<span class="mono">經費項目名稱</span>、<span class="mono">職編</span>（職編可用逗號分隔多筆）。
+        請先確認 <span class="mono">權限</span> 是否已經開通在做申請謝謝!<br/>
+       若權限尚未開通<span class="mono">再在填寫申請表</span>,<span class="mono">並等候</span><span class="mono">1-2天</span>謝謝。
       </div>
       <div class="small muted" style="margin-top:10px" id="meta"></div>
     </div>
